[package]
name = "rusty-aquarium"
version = "0.16.0"
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2021"
default-run = "rusty-aquarium"

[dependencies]
macroquad = "0.3.13"
macroquad-particles = "0.1.1"
futures = "0.3.19"
nanoserde = "0.1.29"
quad-net = "0.1.1"
# For systemdata bin
sysinfo = { version = "0.16.*", optional = true }
# For googlesheetsdata bin
structopt = { version = "0.3.25", optional = true }
google-sheets4 = { version = "*", optional = true }
rustls = { version = "0.16.0", optional = true }
hyper = { version = "^0.14", optional = true }
hyper-rustls = { version = "^0.22", optional = true }
yup-oauth2 = { version = "^5.0", optional = true }
tokio = { version = "~1.2", features = [
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
    "fs",
], optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.68", optional = true }
# For csvdata bin
csv = { version = "1.1", optional = true }
notify = { version = "4.0.17", optional = true }
#serde = { version = "1.0.130", features = ["derive"], optional = true }
#serde_json = { version = "1.0.68", optional = true }
#structopt = { version = "0.3.25", optional = true }
# For bandata bin
chrono = { version = "0.4.*", optional = true }

[features]
build-systemdata = ["sysinfo"]
build-googlesheetsdata = ["structopt", "google-sheets4", "rustls", "hyper", "hyper-rustls", "yup-oauth2", "tokio", "serde", "serde_json"]
build-csvdata = ["csv", "notify", "serde", "serde_json", "structopt"]
build-bandata = ["chrono"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }
# Support reading OS root certs
rustls-native-certs = "0.6.1"

# Support reading OS root certs
[target."cfg(not(target_arch = \"wasm32\"))".dependencies.ureq]
version = "2.4"
features = ["native-certs"]

# Doesn't work with android build
[profile.dev.package.'*']
opt-level = 3

[package.metadata.scripts]
build-web = "bin/build-web"
serve-web = "bin/serve-web"
build-win = "bin/build-win"
build-mac = "bin/build-mac"
build-apk = "bin/build-apk"
build-linux = "bin/build-linux"
update-example = "bin/update-example"

[package.metadata.android]
assets = "assets"
version_code = 2
version_name = "Abstract Abacus"

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "userLandscape"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1

[[bin]]
name = "systemdata"
required-features = ["build-systemdata"]

[[bin]]
name = "googlesheetsdata"
required-features = ["build-googlesheetsdata"]

[[bin]]
name = "csvdata"
required-features = ["build-csvdata"]

[[bin]]
name = "bandata"
required-features = ["build-bandata"]
