[package]
name = "rusty-aquarium"
version = "0.18.1"
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2021"
default-run = "rusty-aquarium"
description = "Data visualization as a fish tank"

[dependencies]
futures = "0.3"
macroquad = "0.4"
macroquad-particles = "0.2"
nanoserde = "0.1"
quad-net = "0.1"
# For systemdata bin
sysinfo = { version = "0.26", optional = true }
# For googlesheetsdata bin
google-sheets4 = { version = "=3.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.21", features = ["macros", "io-util", "rt", "rt-multi-thread", "fs"], optional = true }
clap = { version = "4.0.18", features = ["derive"], optional = true }
# For csvdata bin
csv = { version = "1.1", optional = true }
notify = { version = "5.0", optional = true }
# For bandata bin
chrono = { version = "0.4.22", optional = true }

[features]
build-bandata = ["chrono"]
build-csvdata = ["csv", "notify", "serde", "serde_json", "clap"]
build-googlesheetsdata = ["google-sheets4", "tokio", "clap"]
build-systemdata = ["sysinfo"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# Support reading OS root certs
rustls-native-certs = "0.6"

# Support reading OS root certs
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ureq]
version = "2.5"
features = ["native-certs"]

[profile.dev]
debug = 1 # less precise locations

# Doesn't work with android build
[profile.dev.package.'*']
debug = false # no debug symbols for deps
opt-level = 3

[package.metadata.scripts]
build-web = "bin/build-web"
serve-web = "bin/serve-web"
build-win = "bin/build-win"
build-mac = "bin/build-mac"
build-apk = "bin/build-apk"
build-linux = "bin/build-linux"
update-example = "bin/update-example"

[package.metadata.android]
assets = "assets"
version_code = 2
version_name = "Abstract Abacus"

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "userLandscape"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
strip = true

[[bin]]
name = "systemdata"
required-features = ["build-systemdata"]

[[bin]]
name = "googlesheetsdata"
required-features = ["build-googlesheetsdata"]

[[bin]]
name = "csvdata"
required-features = ["build-csvdata"]

[[bin]]
name = "bandata"
required-features = ["build-bandata"]
