[package]
name = "csvdata"
version = "0.1.0"
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
notify = "4.0.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
structopt = "0.3.25"
